Added support to record payments
